<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/sp_screen_height_10"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:text="@string/bank_priority"/>
    <RadioGroup
        android:id="@+id/rg_priority_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/sp_screen_height_10">
        <RadioButton
            android:id="@+id/rb_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Primary"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Secondary"/>
        <RadioButton
            android:id="@+id/rb_non_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Non Company"/>
    </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:text="@string/acc_type"/>
        <RadioGroup
            android:id="@+id/rg_accountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/sp_screen_height_10">
            <RadioButton
                android:id="@+id/rb_savings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Savings"/>
            <RadioButton
                android:id="@+id/rb_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current"/>
            <RadioButton
                android:id="@+id/rb_joint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Joint"/>
        </RadioGroup>
        <EditText
            android:id="@+id/et_branchid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:hint="@string/branch_id"/>
        <EditText
            android:id="@+id/et_nicnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:hint="@string/nic_no"/>

        <EditText
            android:id="@+id/et_acc_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:hint="@string/acc_no"/>
        <EditText
            android:id="@+id/et_acc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:hint="@string/acc_name"/>

        <Button
            android:id="@+id/btn_addBankData"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_screen_height_50"
            android:background="@drawable/btn_round_corner_blue"
            android:text="@string/next"
            android:layout_margin="@dimen/sp_screen_height_20"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>