<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sp_screen_height_10"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sp_screen_height_10"
                android:hint="@string/merchant_name"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sp_screen_height_10"
                android:hint="@string/merchant_email"/>
            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sp_screen_height_10"
                android:hint="@string/merchant_mobile"/>
            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sp_screen_height_10"
                android:hint="@string/merchant_address"/>
            <EditText
                android:id="@+id/et_avg_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sp_screen_height_10"
                android:hint="@string/avg_evenue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nic Uploads"
                android:layout_marginBottom="@dimen/sp_screen_height_10"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_nicfront"
                    android:layout_width="@dimen/sp_screen_height_100"
                    android:layout_height="@dimen/sp_screen_height_100"
                    android:layout_marginLeft="@dimen/sp_screen_height_20"/>
                <ImageView
                    android:id="@+id/img_nicback"
                    android:layout_width="@dimen/sp_screen_height_100"
                    android:layout_height="@dimen/sp_screen_height_100"
                    android:layout_marginLeft="@dimen/sp_screen_height_20"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Owner Photo"
                android:layout_marginBottom="@dimen/sp_screen_height_10"/>
            <ImageView
                android:id="@+id/img_owner"
                android:layout_width="@dimen/sp_screen_height_100"
                android:layout_height="@dimen/sp_screen_height_100"
                android:layout_marginLeft="@dimen/sp_screen_height_20"
                android:layout_marginBottom="@dimen/sp_screen_height_10"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Outlet Photo"
                android:layout_marginBottom="@dimen/sp_screen_height_10"/>
            <ImageView
                android:id="@+id/img_outlet"
                android:layout_width="@dimen/sp_screen_height_100"
                android:layout_height="@dimen/sp_screen_height_100"
                android:layout_marginLeft="@dimen/sp_screen_height_20"/>
            <Button
                android:id="@+id/btn_save_companyData"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp_screen_height_50"
                android:background="@drawable/btn_round_corner_blue"
                android:text="@string/next"
                android:layout_margin="@dimen/sp_screen_height_20"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>