<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/sp_screen_height_10"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/sp_screen_height_10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sp_screen_height_20"
                android:text="Company Name : " />
            <TextView
                android:id="@+id/tv_companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ABC company"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/sp_screen_height_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sp_screen_height_20"
            android:text="Business Register Number : " />
            <TextView
                android:id="@+id/tv_brnumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp_screen_height_20"
                android:text="12345"/>
        </LinearLayout>
        <EditText
            android:id="@+id/et_agentid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:hint="@string/agent_id"/>
        <EditText
            android:id="@+id/et_app_reg_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:hint="Application Registration Number"/>
        <EditText
            android:id="@+id/et_comp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:inputType="textEmailAddress"
            android:hint="@string/comp_email"/>
        <EditText
            android:id="@+id/et_comp_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:hint="@string/comp_address"/>
        <Spinner
            android:id="@+id/sp_business_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"></Spinner>
        <EditText
            android:id="@+id/et_br_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:hint="@string/br_number"/>
        <EditText
            android:id="@+id/et_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp_screen_height_10"
            android:inputType="phone"
            android:hint="@string/tel_no"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Business Registration"
            android:layout_marginBottom="@dimen/sp_screen_height_10"/>
        <ImageView
            android:id="@+id/img_br_upload"
            android:layout_width="@dimen/sp_screen_height_80"
            android:layout_height="@dimen/sp_screen_height_80"
            android:layout_marginBottom="@dimen/sp_screen_height_10"/>

        <Button
            android:id="@+id/btn_save_companyData"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_screen_height_50"
            android:background="@drawable/btn_round_corner_blue"
            android:text="@string/next"
            android:layout_margin="@dimen/sp_screen_height_20"/>
    </LinearLayout>

    </ScrollView>
</LinearLayout>